# tty-egpf-monitor

./: .clang-format  .gitignore  DEPLOYMENT.md  INSTALLATION.md  Makefile  README.md  RELEASE.md  Release  UBUNTU_22_04_COMPATIBILITY.md  UBUNTU_COMPATIBILITY.md  ansible-example.yml  ansible-version-example.yml  build-package.sh  check-dependencies.sh  cleanup-apt-repo.sh  debug-picocom.sh  diagnose-ubuntu-22.04.sh  generate_package_index.sh  index.html  install-version.sh  install-working-version.sh  install.sh  public-apt-key.asc  public-apt-key.gpg  setup-apt-repo.sh  setup-repo.sh  test-compatibility.sh  test-installation.sh  test-multi-ubuntu.sh  test_ebpf  test_ebpf.c  test_open  test_open.c  test_rx_tx.py  test_tty.py  test_usb_activity.c  update-apt-repo.sh
.github/workflows/: apt-repo.yml  build-package.yml  build.yml  ci-robust.yml  ci-simple.yml  ci.yml  python-publish.yml  release.yml
debian/: changelog  control  control.jammy  control.noble  rules  tty-egpf-monitor.substvars  tty-egpf-monitord.postinst  tty-egpf-monitord.postrm  tty-egpf-monitord.prerm  tty-egpf-monitord.substvars
dists/: index.html
dists/jammy/: InRelease  Release  Release.gpg  index.html
dists/noble/: InRelease  Release  Release.gpg  index.html
packaging/: tty-egpf-monitord-wrapper.sh  tty-egpf-monitord.service  tty-egpf-monitord.service.jammy  tty-egpf-monitord.service.noble
pool/: index.html
pool/jammy/: index.html  tty-egpf-monitor-cli_0.4.0-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.1-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.18-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.19-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.20-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.21-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.22-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.23-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.31-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.32-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.33-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.34-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.36-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.37-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.38-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.39-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.4-1_amd64~jammy.deb  tty-egpf-monitor-cli_0.4.40-1_amd64~jammy.deb  (+276 more)
python-client/: MANIFEST.in  README.md  pyproject.toml  setup.py
python-client/examples/: README.md  automation_script.py  basic_usage.py  monitor_serial_data.py
python-client/tty_egpf_monitor/: __init__.py  cli.py  client.py  models.py
src/: cli.c  daemon.c  orchestrator.c  sniffer.bpf.c  sniffer_simple.bpf.c
tools/: gen-vmlinux-h.sh  vmlinux-fallback.h
(+301 files in other folders)
