[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tty-egpf-monitor"
version = "0.5.22"
description = "Python client library for TTY eBPF Monitor daemon"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "TTY eBPF Monitor Team", email = "contact@seelso.net"}
]
maintainers = [
    {name = "TTY eBPF Monitor Team", email = "contact@seelso.net"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Terminals :: Serial",
]
keywords = [
    "serial", "tty", "monitoring", "ebpf", "uart", "debugging", 
    "reverse-engineering", "protocol-analysis", "hardware"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/seelso-net/tty-egpf-monitor"
Documentation = "https://github.com/seelso-net/tty-egpf-monitor/blob/main/README.md"
Repository = "https://github.com/seelso-net/tty-egpf-monitor"
"Bug Tracker" = "https://github.com/seelso-net/tty-egpf-monitor/issues"
"APT Repository" = "https://seelso-net.github.io/tty-egpf-monitor"

[project.scripts]
tty-egpf-monitor-py = "tty_egpf_monitor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tty_egpf_monitor*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
tty_egpf_monitor = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=tty_egpf_monitor --cov-report=html --cov-report=term-missing"
